--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
 
 :root {
 	--bg: #010409;
@@ -10,6 +10,7 @@ body,
 html {
 	padding: 0;
 	margin: 0;
+	user-select: none;
 }
 
 body,
@@ -17,8 +18,18 @@ html,
 #__next {
 	background-color: var(--bg);
 	color: var(--text);
-	font-family: 'Inter', sans-serif;
+	font-family: 'Roboto', sans-serif;
 
 	height: 100%;
 	width: 100%;
+}
+
+.clickable {
+	transition: background 0.075s;
+}
+
+.clickable:hover {
+	cursor: pointer;
+	background: rgba(255, 255, 255, 0.3);
+	border-radius: 2px;
 }
