--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -26,10 +26,23 @@ html,
 
 .clickable {
 	transition: background 0.075s;
+
+	&:hover {
+		cursor: pointer;
+		background: rgba(255, 0, 255, 0.3);
+		border-radius: 2px;
+	}
 }
 
-.clickable:hover {
-	cursor: pointer;
-	background: rgba(255, 255, 255, 0.3);
-	border-radius: 2px;
+.socialIcon {
+	transition: color 0.075s;
+
+	&:hover {
+		color: magenta;
+	}
+}
+
+a {
+	color: white;
+	text-decoration: none;
 }
