--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -2,7 +2,7 @@
 
 :root {
 	--bg: #010409;
-	--text: #ffffff;
+	--fg: #ffffff;
 }
 
 *,
@@ -17,7 +17,7 @@ body,
 html,
 #__next {
 	background-color: var(--bg);
-	color: var(--text);
+	color: var(--fg);
 	font-family: 'Roboto', sans-serif;
 
 	height: 100%;
@@ -32,10 +32,21 @@ html,
 		background: rgba(255, 0, 255, 0.3);
 		border-radius: 2px;
 	}
+
+	&Link {
+		color: magenta;
+		padding: 4px;
+		margin-left: -4px;
+		&:hover {
+			cursor: pointer;
+			border-radius: 2px;
+			background: rgba(255, 0, 255, 0.3);
+		}
+	}
 }
 
 .socialIcon {
-	transition: color 0.075s;
+	transition: color 0.125s;
 
 	&:hover {
 		color: magenta;
@@ -45,4 +56,9 @@ html,
 a {
 	color: white;
 	text-decoration: none;
+}
+
+p,
+span {
+	font-size: 18px;
 }
