--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -67,8 +67,15 @@ span {
 	width: 33.3%;
 }
 
+.ToolListItem {
+	width: 22%;
+}
+
 @media only screen and (max-width: 760px) {
 	.GitHubPresenceCard {
+		width: 100%;
+	}
+	.ToolListItem {
 		width: 100%;
 	}
 }
